# rs-peer-workspace

./: Cargo.toml  README.md
rs-peer-workspace-client/: Cargo.toml  Dockerfile.build  README.md
rs-peer-workspace-client/src/: main.rs
rs-peer-workspace-client/src/app/: actions.rs  dialogs.rs  editor.rs  explorer.rs  mod.rs  state.rs  tree.rs  types.rs
rs-peer-workspace-client/src/net/: mod.rs
rs-peer-workspace-proxy/: Cargo.toml  Dockerfile  README.md  docker-compose.example.yml
rs-peer-workspace-proxy/src/: main.rs
rs-peer-workspace-server/: Cargo.toml  Dockerfile.build  README.md
rs-peer-workspace-server/src/: main.rs  protocol.rs  rpc.rs
rs-peer-workspace-server/src/transport/: webrtc.rs
rs-peer-workspace-shared/: Cargo.toml
rs-peer-workspace-shared/src/: app.rs  lib.rs  project.rs  relay.rs
