[package]
name = "rs-peer-workspace-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
eframe = "0.31.1"
egui = "0.31.1"
futures-util = "0.3.31"
runmat-runtime = "0.2.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
webrtc = "0.17.1"
