[package]
name = "rs-peer-workspace-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["ws"] }
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
