[package]
name = "rs-peer-workspace-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytes = "1.11.0"
clap = { version = "4.5.32", features = ["derive"] }
futures-util = "0.3.31"
rs-peer-workspace-shared = { path = "../rs-peer-workspace-shared" }
runmat-runtime = "0.2.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
webrtc = "0.17.1"
